Vertical alignment is fixed. It's time to get back to tutorial

--- a/Board/css/board.css
+++ b/Board/css/board.css
@@ -1,16 +1,6 @@
-.vcenter {
-    display: inline-block;
-    vertical-align: middle;
-    float: none;
-}
-
-.progress.vertical {
-    width: 20px;
-    height: 240px;
-    margin-right: 20px;
-    background: none;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
-    border: none;
+.vertical-align {
+    display: flex;
+    align-items: center;
+    height: 3em;
+    background-color:darkslategray;
 }
